--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "quiz question",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "concurrently \"cd Backend && nodemon index.js\" \"cd Frontend && npm run dev\""
   },
   "author": "Sangeeta",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "concurrently": "^9.0.0",
+    "react-router-dom": "^6.26.2"
+  }
 }
